[package]
name    = "ffmpeg"
version = "0.3.0"
build   = "build.rs"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Safe FFmpeg wrapper"
repository  = "https://github.com/meh/rust-ffmpeg"
keywords    = ["audio", "video"]

[features]
default = ["codec", "device", "filter", "format", "resampling", "software-scaling"]

static = ["ffmpeg-sys/static"]
# Currently the version built by ffmpeg-sys is 4.1
build  = ["static", "ffmpeg-sys/build", "ffmpeg_4_1"]

# licensing
build-license-gpl      = ["ffmpeg-sys/build-license-gpl"]
build-license-nonfree  = ["ffmpeg-sys/build-license-nonfree"]
build-license-version3 = ["ffmpeg-sys/build-license-version3"]

# misc
build-pic  = ["ffmpeg-sys/build-pic"]
build-zlib = ["ffmpeg-sys/build-zlib"]

# ssl
build-lib-gnutls  = ["ffmpeg-sys/build-lib-gnutls"]
build-lib-openssl = ["ffmpeg-sys/build-lib-openssl"]

# filters
build-lib-fontconfig = ["ffmpeg-sys/build-lib-fontconfig"]
build-lib-frei0r     = ["ffmpeg-sys/build-lib-frei0r"]
build-lib-ladspa     = ["ffmpeg-sys/build-lib-ladspa"]
build-lib-ass        = ["ffmpeg-sys/build-lib-ass"]
build-lib-freetype   = ["ffmpeg-sys/build-lib-freetype"]
build-lib-freebidi   = ["ffmpeg-sys/build-lib-freebidi"]
build-lib-opencv     = ["ffmpeg-sys/build-lib-opencv"]

# encoders/decoders
build-lib-aacplus          = ["ffmpeg-sys/build-lib-aacplus"]
build-lib-celt             = ["ffmpeg-sys/build-lib-celt"]
build-lib-dcadec           = ["ffmpeg-sys/build-lib-dcadec"]
build-lib-faac             = ["ffmpeg-sys/build-lib-faac"]
build-lib-fdk-aac          = ["ffmpeg-sys/build-lib-fdk-aac"]
build-lib-gsm              = ["ffmpeg-sys/build-lib-gsm"]
build-lib-ilbc             = ["ffmpeg-sys/build-lib-ilbc"]
build-lib-kvazaar          = ["ffmpeg-sys/build-lib-kvazaar"]
build-lib-mp3lame          = ["ffmpeg-sys/build-lib-mp3lame"]
build-lib-opencore-amrnb   = ["ffmpeg-sys/build-lib-opencore-amrnb"]
build-lib-opencore-amrwb   = ["ffmpeg-sys/build-lib-opencore-amrwb"]
build-lib-openh264         = ["ffmpeg-sys/build-lib-openh264"]
build-lib-openjpeg         = ["ffmpeg-sys/build-lib-openjpeg"]
build-lib-opus             = ["ffmpeg-sys/build-lib-opus"]
build-lib-schroedinger     = ["ffmpeg-sys/build-lib-schroedinger"]
build-lib-shine            = ["ffmpeg-sys/build-lib-shine"]
build-lib-snappy           = ["ffmpeg-sys/build-lib-snappy"]
build-lib-speex            = ["ffmpeg-sys/build-lib-speex"]
build-lib-stagefright-h264 = ["ffmpeg-sys/build-lib-stagefright-h264"]
build-lib-theora           = ["ffmpeg-sys/build-lib-theora"]
build-lib-twolame          = ["ffmpeg-sys/build-lib-twolame"]
build-lib-utvideo          = ["ffmpeg-sys/build-lib-utvideo"]
build-lib-vo-aacenc        = ["ffmpeg-sys/build-lib-vo-aacenc"]
build-lib-vo-amrwbenc      = ["ffmpeg-sys/build-lib-vo-amrwbenc"]
build-lib-vorbis           = ["ffmpeg-sys/build-lib-vorbis"]
build-lib-vpx              = ["ffmpeg-sys/build-lib-vpx"]
build-lib-wavpack          = ["ffmpeg-sys/build-lib-wavpack"]
build-lib-webp             = ["ffmpeg-sys/build-lib-webp"]
build-lib-x264             = ["ffmpeg-sys/build-lib-x264"]
build-lib-x265             = ["ffmpeg-sys/build-lib-x265"]
build-lib-avs              = ["ffmpeg-sys/build-lib-avs"]
build-lib-xvid             = ["ffmpeg-sys/build-lib-xvid"]

# protocols
build-lib-smbclient = ["ffmpeg-sys/build-lib-smbclient"]
build-lib-ssh       = ["ffmpeg-sys/build-lib-ssh"]

# components
codec               = ["ffmpeg-sys/avcodec"]
device              = ["ffmpeg-sys/avdevice", "format"]
filter              = ["ffmpeg-sys/avfilter"]
format              = ["ffmpeg-sys/avformat", "codec"]
resampling          = ["ffmpeg-sys/swresample"]
postprocessing      = ["ffmpeg-sys/postproc"]
software-scaling    = ["ffmpeg-sys/swscale", "codec"]

# The minimum version supported is FFMpeg 3.0, which is enabled automatically
ffmpeg_3_1 = []
ffmpeg_3_2 = ["ffmpeg_3_1"]
ffmpeg_3_3 = ["ffmpeg_3_2"]
ffmpeg_3_4 = ["ffmpeg_3_3"]
ffmpeg_4_0 = ["ffmpeg_3_4"]
ffmpeg_4_1 = ["ffmpeg_4_0"]
ffmpeg_4_2 = ["ffmpeg_4_1"]
ffmpeg_4_3 = ["ffmpeg_4_2"]

[dependencies]
libc      = "0.2"
bitflags  = "1.0"
thiserror = "1"

[dependencies.serde]
version = "1.0.0"
optional = true
features = ["derive"]

[dependencies.image]
version  = "0.23"
optional = true

[dependencies.ffmpeg-sys]
version = "4.2"
default-features = false
