[package]
name    = "ffmpeg-sys"
version = "2.8.0-1"
build   = "build.rs"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "FFI bindings to FFmpeg"
repository  = "https://github.com/meh/rust-ffmpeg-sys"
keywords    = ["audio", "video"]

[dependencies]
libc = "*"

[features]
default  = ["avcodec", "avdevice", "avfilter", "avformat", "avresample", "swresample", "swscale"]

static = []

build          = ["static"]
build-gpl      = []
build-nonfree  = []
build-version3 = []

avcodec    = []
avdevice   = ["avformat"]
avfilter   = []
avformat   = ["avcodec"]
avresample = []
postproc   = []
swresample = []
swscale    = []
